@@ -5,11 +5,11 @@ import java.util.Hashtable;
 
 public class GameBoard {
 
-	private ArrayList<Cell> cells = new ArrayList<Cell>();
-    private ArrayList<Card> chanceCards = new ArrayList<Card>();
+	private final ArrayList<Cell> cells = new ArrayList<Cell>();
+    private final ArrayList<Card> chanceCards = new ArrayList<Card>();
 	//the key of colorGroups is the name of the color group.
-	private Hashtable colorGroups = new Hashtable();
-	private ArrayList<Card> communityChestCards = new ArrayList<Card>();
+	private final Hashtable colorGroups = new Hashtable();
+	private final ArrayList<Card> communityChestCards = new ArrayList<Card>();
 	private GameMaster gameMaster;
 	
 	public GameBoard() {
@@ -31,26 +31,26 @@ public class GameBoard {
 	
 	public void addCell(PropertyCell cell) {
 		int propertyNumber = getPropertyNumberForColor(cell.getColorGroup());
-		colorGroups.put(cell.getColorGroup(), new Integer(propertyNumber + 1));
+		colorGroups.put(cell.getColorGroup(), Integer.valueOf(propertyNumber + 1));
         cells.add(cell);
 	}
 
     public Card drawCCCard() {
-        Card card = (Card)communityChestCards.get(0);
+        Card card = communityChestCards.get(0);
         communityChestCards.remove(0);
         addCard(card);
         return card;
     }
 
     public Card drawChanceCard() {
-        Card card = (Card)chanceCards.get(0);
+        Card card = chanceCards.get(0);
         chanceCards.remove(0);
         addCard(card);
         return card;
     }
 
 	public Cell getCell(int newIndex) {
-		return (Cell)cells.get(newIndex);
+		return cells.get(newIndex);
 	}
 	
 	public int getCellNumber() {
@@ -84,7 +84,7 @@ public class GameBoard {
 
 	public Cell queryCell(String string) {
 		for(int i = 0; i < cells.size(); i++){
-			Cell temp = (Cell)cells.get(i); 
+			Cell temp = cells.get(i);
 			if(temp.getName().equals(string)) {
 				return temp;
 			}
@@ -94,7 +94,7 @@ public class GameBoard {
 	
 	public int queryCellIndex(String string){
 		for(int i = 0; i < cells.size(); i++){
-			Cell temp = (Cell)cells.get(i); 
+			Cell temp = cells.get(i);
 			if(temp.getName().equals(string)) {
 				return i;
 			}
