@@ -7,7 +7,7 @@ import java.util.Hashtable;
 
 public class Player {
 	//the key of colorGroups is the name of the color group.
-	private Hashtable colorGroups = new Hashtable();
+	private final Hashtable colorGroups = new Hashtable();
 	private boolean inJail;
 	private int money;
 	private String name;
@@ -31,20 +31,20 @@ public class Player {
             PropertyCell cell = (PropertyCell)property;
             properties.add(cell);
             colorGroups.put(
-                    cell.getColorGroup(), 
-                    new Integer(getPropertyNumberForColor(cell.getColorGroup())+1));
+                    cell.getColorGroup(),
+                    Integer.valueOf(getPropertyNumberForColor(cell.getColorGroup()) + 1));
         }
         if(property instanceof RailRoadCell) {
             railroads.add(property);
             colorGroups.put(
-                    RailRoadCell.COLOR_GROUP, 
-                    new Integer(getPropertyNumberForColor(RailRoadCell.COLOR_GROUP)+1));
+                    RailRoadCell.COLOR_GROUP,
+                    Integer.valueOf(getPropertyNumberForColor(RailRoadCell.COLOR_GROUP) + 1));
         }
         if(property instanceof UtilityCell) {
             utilities.add(property);
             colorGroups.put(
-                    UtilityCell.COLOR_GROUP, 
-                    new Integer(getPropertyNumberForColor(UtilityCell.COLOR_GROUP)+1));
+                    UtilityCell.COLOR_GROUP,
+                    Integer.valueOf(getPropertyNumberForColor(UtilityCell.COLOR_GROUP) + 1));
         }
         setMoney(getMoney() - amount);
     }
@@ -75,8 +75,8 @@ public class Player {
 			else {
 				player.properties.add(cell);
 				colorGroups.put(
-						cell.getColorGroup(), 
-						new Integer(getPropertyNumberForColor(cell.getColorGroup())+1));
+						cell.getColorGroup(),
+                        Integer.valueOf(getPropertyNumberForColor(cell.getColorGroup()) + 1));
 			}
 		}
 		properties.clear();
